# Battery-Optimisation-Benchmarking

./: .gitignore  Manifest.toml  Project.toml  README.md  pyproject.toml
battery_optimisation_benchmarking/data/: PUBLIC_DVD_DISPATCHPRICE_202112010000.parquet
battery_optimisation_benchmarking/python/: linopy.ipynb  mip.ipynb  pyomo.ipynb
battery_optimisation_benchmarking/python/.ipynb_checkpoints/: linopy-checkpoint.ipynb
