[tool.poetry]
name = "battery-optimisation-benchmarking"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"
packages = [{include = "battery_optimisation_benchmarking"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pandas = "^1.5.0"
linopy = "^0.0.14"
matplotlib = "^3.6.1"
jupyter = "^1.0.0"
alive-progress = "^2.4.1"
xarray = "^2022.10.0"
fastparquet = "^0.8.3"
highspy = "^1.1.2.dev3"
gurobipy = "^9.5.2"
mip = "^1.14.1"
Pyomo = "^6.4.2"


[tool.poetry.group.dev.dependencies]
jupyter-black = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
